# rust-psp

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  KERNEL_MODE_PLAN.md  LICENSE  README.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  main-ci.yml  pr-validation.yml
cargo-psp/: Cargo.toml
cargo-psp/src/: fix_imports.rs  main.rs
ci/: Dockerfile-ppsspp  run-ci.sh
ci/std_verification/: Cargo.toml
ci/tests/: Cargo.toml
docker/: rust-ci.Dockerfile
examples/audio-tone/: Cargo.toml
examples/clock-speed/: Cargo.toml
examples/config-save/: Cargo.toml
examples/cube/: Cargo.toml
examples/embedded-graphics/: Cargo.toml
examples/file-io/: Cargo.toml
examples/fontdue-scrolltext/: Cargo.toml
examples/gu-background/: Cargo.toml
examples/gu-debug-print/: Cargo.toml
examples/hello-world/: Cargo.toml
examples/http-client/: Cargo.toml
examples/input-analog/: Cargo.toml
examples/kernel-mode/: Cargo.toml
examples/msg-dialog/: Cargo.toml
examples/net-http/: Cargo.toml
examples/osk-input/: Cargo.toml
examples/paint-mode/: Cargo.toml
examples/rainbow/: Cargo.toml
examples/ratatui/: Cargo.toml
examples/rtc-sysinfo/: Cargo.toml
examples/rust-std-hello-world/: Cargo.toml
examples/savedata/: Cargo.toml
examples/screenshot/: Cargo.toml
examples/system-font/: Cargo.toml
examples/thread-sync/: Cargo.toml
examples/time/: Cargo.toml
examples/timer-alarm/: Cargo.toml
psp/: Cargo.toml
psp/src/: audio.rs  (+48 more)
rust-std-src/: prepare-sysroot.sh
site/: index.html
(+72 files in other folders)
