[workspace]
resolver = "2"
members = [
    "psp",
    "examples/*",
    "ci/std_verification",
    "ci/tests",
]
# cargo-psp builds for the host, not the PSP target.
exclude = ["cargo-psp"]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AndrewAltimit/rust-psp"
authors = [
    "Marko Mijalkovic <marko.mijalkovic97@gmail.com>",
    "Paul Sajna <sajattack@gmail.com>",
    "Josh Wood <sk83rjosh@gmail.com>",
    "AndrewAltimit",
]

[workspace.lints.clippy]
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

# unicode-width workaround for mips target panic.
[patch.crates-io]
unicode-width = { git = "https://git.sr.ht/~sajattack/unicode-width" }
