[package]
name = "cargo-psp"
version = "1.0.0"
description = "`cargo build` wrapper for creating Sony PSP executables"
repository = "https://github.com/AndrewAltimit/rust-psp"
license = "MIT"
authors = ["AndrewAltimit"]
edition = "2024"
default-run = "cargo-psp"

[[bin]]
name = "prxgen"

[[bin]]
name = "pack-pbp"

[[bin]]
name = "mksfo"

[[bin]]
name = "prxmin"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
goblin = "0.9"
scroll = "0.12"
cargo_metadata = "0.19"
rustc_version = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"
